--- a/dev/plan.html
+++ b/dev/plan.html
@@ -73,6 +73,10 @@
         transition: all 0.5s ease;
         cursor: grab;
       }
+
+      .nav-linkplan::after{
+        width: 100% !important;
+      }
       /* footer */
 
       .btnSmall {
