adjust search bar width

--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -205,7 +205,7 @@
 
 
 <!-- phone vision start -->
-<div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
+<!-- <div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
     <div id="carouselPhoneGroupControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner innerCardScheGroupPhoneSlide">
             <div id="groupCardCarousel_1" class="carousel-item active" name="groupCardCarousel_1">
@@ -368,6 +368,8 @@
             <span class="sr-only ">Next</span>
         </a>
     </div>
-</div>
+</div> -->
 <!-- phone version end -->
+
+
 <!-- Group Main End -->
