--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -35,22 +35,22 @@
         <div class="checkBox4phone d-sm-block d-md-none col-12">
             <div>
                 <div>
-                    <label for="">團員人數：</label>
+                    <label class="phoneFilter_p" for="">團員人數：</label>
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="">
-                    <label for="">任意</label>
+                    <label class="phoneFilter" for="">任意</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and Group_Ppl between 1 and 10">
-                    <label for="">1-10</label>
+                    <label class="phoneFilter" for="">1-10</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and Group_Ppl between 10 and 20">
-                    <label for="">10-20</label>
+                    <label class="phoneFilter" for="">10-20</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and 20<Group_Ppl">
-                    <label for="">20人以上</label>
+                    <label class="phoneFilter" for="">20人以上</label>
                 </div>
             </div>
             <div>
                 <div>
-                    <label for="">性別限制：</label>
+                    <label class="phoneFilter_p" for="">性別限制：</label>
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterSex_phone" id="" value="">
@@ -63,7 +63,7 @@
             </div>
             <div>
                 <div>
-                    <label for="">旅遊天數:</label>
+                    <label class="phoneFilter_p" for="">旅遊天數:</label>
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterDay_phone" id="" value="">
@@ -84,7 +84,7 @@
             </div>
             <div>
                 <div>
-                    <label for="">出發月份:</label>
+                    <label class="phoneFilter_p" for="">出發月份:</label>
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterMonth_phone" id=""
